test/e2e/fail_compile/type_errors/runtime_demotion.cst
runtime fn source() -> num { 1 }

fn sink(value: num) -> num { value }

fn main() -> num {
    sink(source())
}
